Closed Bug 1598656 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::intl::OSPreferences::ReadSystemLocales]

Categories

(Core :: Internationalization, defect)

Unspecified
Windows 10
defect
Not set
major

Tracking

()

RESOLVED FIXED
mozilla72
Tracking Status
firefox-esr68 --- unaffected
firefox70 --- unaffected
firefox71 --- unaffected
firefox72 blocking fixed

People

(Reporter: marcia, Assigned: jfkthame)

Details

(Keywords: crash, regression, topcrash)

Crash Data

Attachments

(1 file, 1 obsolete file)

This bug is for crash report bp-6b8e2fca-8b5d-4acb-8a4e-404760191122.

Windows only crash which started in 20191122091512: https://bit.ly/35nM7lk. Possible regression range based on Build ID: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=76e20a306bc262843ec06d59c54416131af030cb&tochange=80ab213de5a9647fb7da0ed969a3c5a0d5ce4cdf

Maybe zbraniecki knows something since there is code in the stack from Bug 1414186.

Top 10 frames of crashing thread:

0 xul.dll mozilla::intl::OSPreferences::ReadSystemLocales intl/locale/windows/OSPreferences_win.cpp:74
1 xul.dll mozilla::intl::OSPreferences::GetSystemLocales intl/locale/OSPreferences.cpp:256
2 xul.dll void gfxPlatformFontList::AppendCJKPrefLangs gfx/thebes/gfxPlatformFontList.cpp:1694
3 xul.dll void gfxPlatformFontList::GetLangPrefs gfx/thebes/gfxPlatformFontList.cpp:1618
4 xul.dll class gfxFont* gfxFontGroup::WhichPrefFontSupportsChar gfx/thebes/gfxTextRun.cpp:3299
5 xul.dll gfxFontGroup::FindFontForChar gfx/thebes/gfxTextRun.cpp:2991
6 xul.dll static void gfxFontGroup::InitScriptRun<char16_t> gfx/thebes/gfxTextRun.cpp:2491
7 xul.dll static void gfxFontGroup::InitTextRun<char16_t> gfx/thebes/gfxTextRun.cpp:2413
8 xul.dll gfxFontGroup::MakeTextRun gfx/thebes/gfxTextRun.cpp:2285
9 xul.dll void BuildTextRunsScanner::FlushFrames layout/generic/nsTextFrame.cpp:1645

Flags: needinfo?(gandalf)

Jonathan, is it possibly related to your yesterday's landing of bug 1593414?

If I do my math right, in the ifndef scenario this would be line 136 - https://hg.mozilla.org/mozilla-central/file/tip/intl/locale/windows/OSPreferences_win.cpp#l136

Flags: needinfo?(gandalf) → needinfo?(jfkthame)

(In reply to Zibi Braniecki [:zbraniecki][:gandalf] from comment #1)

Jonathan, is it possibly related to your yesterday's landing of bug 1593414?

Presumably so.

If I do my math right, in the ifndef scenario this would be line 136 - https://hg.mozilla.org/mozilla-central/file/tip/intl/locale/windows/OSPreferences_win.cpp#l136

I don't believe there should be any mismatch of line numbering going on.... when it says line 74, it means line 74. (AFAIK) Which makes it look like this may be happening when something goes out of scope, but it's not obvious to me what's wrong.

Flags: needinfo?(jfkthame)

I only see 12 crash reports so far (recent ones, that is - there are older Win7 crashes that look unrelated), so it's a bit early to say, but one thing I notice is that they're all from the same Windows build (10.0.18362). If that persists as more reports come in, I might begin to suspect an underlying Windows bug in that particular version.

Ah, ok ..... checking crash-stats again, I see a few more reports are in, including one from 10.0.19013 and one from 10.0.18363.

This is the #2 content crasher in the last few days in nightly.

Severity: normal → major

Although I don't currently understand why it would be causing this, I think we should back out bug 1593414 for now. Unless :emk or anyone has a better idea?

Flags: needinfo?(VYV03354)
Assignee: nobody → jfkthame

I wrote a speculation in Phabricator. globalizationPrefs->Release() and languages->Release() will be implicitly called at line 74. Sorry I could not catch this earlier.

Flags: needinfo?(VYV03354)

That's a good suggestion, might well explain the crashes. So I think we should try fixing that; if the crashes still persist after that, we might have to back out, but let's hope it resolves the issue.

Pushed by jkew@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b9e66763153c Ensure RoUninitialize is not called until after the COMPtr<>s have been released. r=emk
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
Attachment #9111191 - Attachment is obsolete: true

Please specify a root cause for this bug. See :tmaity for more information.

Root Cause: --- → ?
Root Cause: ? → Coding: Logical Error
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: