Bug 1598656 - Ensure RoUninitialize is not called until after the COMPtr<>s have been released. r=emk

Differential Revision: https://phabricator.services.mozilla.com/D54505

--HG--
extra : moz-landing-system : lando